# AoC-rs

./: .gitignore  2023-01.out  Cargo.toml  README.md  build.rs
src/: cli.rs  dispatch.rs  dispatch__.rs  dispatcher.rs  main.rs
src/y2022/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  mod.rs
src/y2023/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  mod.rs
