[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["cargo", "string"] }
lazy_static = "1.4.0"
regex = "1.7.0"

[build-dependencies]
glob = "0.3.0"